[package]
name = "listenbrainz_rs_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.20.0"
listenbrainz = "0.7.0"
musicbrainz_rs = { version = "0.5.0", features = ["blocking"] }
#derive_builder = {version = "0.20.0", optional = true}

[features]
# Generate builders for some structs
#builders = ["dep:derive_builder"]