[package]
name = "listenbrainz-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = { version = "0.20.0", optional = true}
dotenvy = "0.15.7"
listenbrainz = { version = "0.7.0", git = "https://github.com/RustyNova016/listenbrainz-rs.git", branch = "main"}
musicbrainz_rs = { version = "0.5.0", features = ["blocking"], default-features = false }

[features]
# Generate builders for some structs
builders = ["dep:derive_builder"]